@@ -5,6 +5,7 @@ AI stuff
 Torpedo stuff
   Add torpedoes to waterfall display(s)
 
+Using towed array should restrict speed.
 Maybe put all ships/subs/torpedoes in one list?
 
 Add thermal layer?
