@@ -1,2 +1,2 @@
-33 950 10 24 2 1 LosAngeles
+33 950 10 24 2 1 75.0 LosAngeles
 
