@@ -1,2 +1,2 @@
-33 1300 10 24 2 1 Akula
+33 1300 10 24 2 1 75.0 Akula
 
