@@ -1,2 +1,2 @@
-35 0 15 20 2 1 Destroyer
+35 0 15 20 2 1 115.0 Destroyer
 
